# korvex

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  pyproject.toml
.github/scripts/: set_version_from_tag.py
.github/workflows/: ci.yml  release.yml
benches/: bench_app.py  bench_router.py
examples/: README.md  asgi_app.py  basic_router.py  route_groups.py
korvex/: __init__.py  _core.pyi  app.py  group.py  response.py  router.py
src/: lib.rs
src/router/: bindings.rs  mod.rs
src/router/engine/: handler.rs  method.rs  mod.rs  node.rs  path.rs  segment.rs
tests/: test_app.py  test_package.py  test_response.py  test_router.py
