[build-system]
requires = ["maturin>=1.14,<2.0"]
build-backend = "maturin"

[project]
name = "korvex"
version = "0.0.1"
description = "A high-performance Rust-powered router for Python, with an optional ASGI layer for hosting it directly"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["router", "routing", "asgi", "rust", "pyo3", "radix-tree"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/3d3n-pyc/korvex"
Issues = "https://github.com/3d3n-pyc/korvex/issues"

[project.optional-dependencies]
serve = ["uvicorn>=0.30"]

[tool.maturin]
module-name = "korvex._core"

[dependency-groups]
dev = [
    "django>=4.2.30",
    "flask>=3.1.3",
    "pytest>=8.4.2",
    "pytest-benchmark>=5.2.3",
    "sanic>=25.3.0",
    "starlette>=0.49.3",
]
